# teammy-api

./: .gitignore  404.html  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
docs/guides/: how-to-guides.md  plugin-example.md
docs/reference/: reference.md
docs/reference/data/: data-packet.md  meeting-metadata.md
docs/reference/engine/: llm-provider.md  meeting-engine.md  persistence-provider.md
docs/reference/plugin/: in-call-plugin-metadata.md  in-call-plugin.md  plugin-config.md
guides/how-to-guides/: index.html
guides/plugin-example/: index.html
reference/data/data-packet/: index.html
reference/data/meeting-metadata/: index.html
reference/engine/llm-provider/: index.html
reference/engine/meeting-engine/: index.html
reference/engine/persistence-provider/: index.html
reference/plugin/in-call-plugin/: index.html
reference/plugin/in-call-plugin-metadata/: index.html
reference/plugin/plugin-config/: index.html
reference/reference/: index.html
teammy/api/: data.py  engine.py  plugin.py
