[tool.poetry]
name = "teammy"
version = "0.2.0"
description = ""
authors = ["Pavle Divovic <pavle@zmaitech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
mkdocs-material = "^9.5.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
